@startuml Adapter
skinparam classAttributeIconSize 0
title Adapter — Business example (C#)

interface IPaymentProcessor {
  + Charge(request : PaymentRequest) : PaymentResult
}
note right of IPaymentProcessor : Target

class AcmePayAdapter {
  - _client : AcmeGatewayClient
  + AcmePayAdapter(client : AcmeGatewayClient)
  + Charge(req : PaymentRequest) : PaymentResult
  - Translate(code : int) : FailureReason
}
note right of AcmePayAdapter : Adapter

class AcmeGatewayClient {
  + Authorize(requestUid : string, customerRef : string, amountCents : long, currency : string) : string
  + Capture(authToken : string, amountCents : long) : string
  + Release(authToken : string) : void
}
note right of AcmeGatewayClient : Adaptee

class AcmeGatewayException {
  + Code : int
}

class CheckoutService {
  - _processor : IPaymentProcessor
  + CheckoutService(processor : IPaymentProcessor)
  + Checkout(req : PaymentRequest) : PaymentResult
}
note right of CheckoutService : Client

class Money <<record struct>> {
  + Amount : decimal
  + Currency : string
  + ToMinorUnits() : long
}

class PaymentRequest <<record>> {
  + IdempotencyKey : Guid
  + CustomerRef : string
  + Amount : Money
}

abstract class PaymentResult <<record>>
class Success <<record>> {
  + AuthorizationId : string
}
class Failure <<record>> {
  + Reason : FailureReason
  + Detail : string
}

enum FailureReason {
  CustomerBlocked
  InvalidAmount
  CaptureFailed
  GatewayError
}

IPaymentProcessor <|.. AcmePayAdapter
AcmePayAdapter o--> AcmeGatewayClient : delegates to
AcmeGatewayClient ..> AcmeGatewayException : throws
CheckoutService --> IPaymentProcessor
PaymentResult <|-- Success
PaymentResult <|-- Failure
PaymentRequest *-- Money
Failure --> FailureReason
AcmePayAdapter ..> PaymentRequest
AcmePayAdapter ..> PaymentResult

@enduml
